Sat May 11 10:08:15 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Need to include sys/types.h before regexp.h in
		test to see if regcomp works.
		Add V5_USE_SHARED_LIB for the tests that are built.

Tue Apr 30 17:51:47 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Test that regcomp actually works.

	* Makefile.in (check-unix): Use $(RM).

	* t_an_to_ln.c (main): Print principal name when an error is
	detected.

Thu Apr 11 22:15:44 1996  Theodore Y. Ts'o  <tytso@dcl>

	* ustime.c (krb5_us_timeofday): When doing the time offset
		adjustments, make sure the microseconds field doesn't go
		negative.

Thu Mar 28 17:20:12 1996  Theodore Y. Ts'o  <tytso@dcl>

	* DNR.c: Replace eight-year-old version of this file with the
		latest version from the Code Warrior MacTCP files.  

	* macsock.c: Use new MacTCP header files.

Wed Mar 27 18:31:44 1996  Theodore Y. Ts'o  <tytso@dcl>

	* macsock.c (gethostbyname, gethostbyaddr): Use universal
		procedure pointers (UPP), which are required on the Mac
		Power PC.

Mon Mar 18 21:49:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add KRB5_RUN_FLAGS

	* Makefile.in: Use runtime flags.

Mon Mar 18 17:30:54 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sn2princ.c (krb5_sname_to_principal): Add casting to avoid warnings.

Mon Mar 18 14:18:58 EST 1996  Richard Basch  <basch@lehman.com>

	* sn2princ.c: Do not try to re-assign const variables.

Sun Mar 17 20:42:17 1996  Ezra Peisach  <epeisach@mit.edu>

        * configure.in: Add USE_ANAME, KRB5_LIBRARIES

	* Makefile.in: Properly use libraries as specified by configure

Wed Mar 13 13:11:49 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* t_std_conf.c: Include string.h

Thu Feb 29 16:14:46 1996  Theodore Y. Ts'o  <tytso@dcl>

	* sendto_kdc.c (krb5_sendto_kdc): Take out calls to
		SOCKET_INITIALIZE and SOCKET_CLEANUP.  This gets done in
		win_glue.c, and we only need to do this once.  (XXX What
		about Macintosh?)
